<resources>
    <string name="app_name">SecondHomeworkApp</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <string name="first_newline_fragment">First\nFragment</string>
    <string name="second_newline_fragment">Second\nFragment</string>
    <string name="send">Send</string>
    <string name="enterText">Enter text</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="enterSomeText">Enter some text</string>
    <string name="createdBy">Created by Dmitry Sukhov</string>
    <string name="night_mode">Night mode</string>
    <string name="night_mode_description">when all is dark</string>
    <string name="show_login_title">Show login</string>
    <string name="your_login_title">Your login</string>
    <string name="ok">Ok</string>
    <string name="settings_changed">Settings changed</string>
    <string name="undo">undo?</string>
    <string name="who_will_see_number_title">Who will see my number?</string>
    <string name="changed_settings">Изменённые настройки:</string>
</resources>