<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <EditTextPreference
        android:key="login"
        android:title="@string/your_login_title"
        app:useSimpleSummaryProvider="true" />
    <CheckBoxPreference
        android:key="show_login"
        android:title="@string/show_login_title" />
    <SwitchPreference
        android:key="switch_night_mode"
        android:summary="@string/night_mode_description"
        android:title="@string/night_mode" />

    <ListPreference
        app:defaultValue="my_contacts"
        app:entries="@array/who_will_see_number_entries"
        app:entryValues="@array/who_will_see_number_values"
        app:key="who_will_see_number"
        app:title="@string/who_will_see_number_title"
        app:useSimpleSummaryProvider="true" />
</PreferenceScreen>